making some #progress with the header

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
             </div>
         </nav>
         <div class="container">
-            <div class="row flex-column-reverse flex-md-row">
-                <div class="order-md-1 header-section-left col-md-6">
+            <div class="row flex-column-reverse flex-md-row header-row">
+                <div class="header-section-left col-md-6">
                     <div class="header-content">
                         <h1>Our team is the "alpha" leader in logistics.</h1>
                         <h5 class="header-section-subtext">Ensuring quality service for all of your transportation
@@ -111,6 +111,9 @@
                         </svg>
 
                     </div>
+                </div>
+                <div class="header-section-right col-m-6">
+                    <img class="slideshow" src="images/RagingWolfSunset.png">
                 </div>
             </div>
         </div>
