--- a/index.html
+++ b/index.html
@@ -129,30 +129,32 @@
             </div>
             <div class="row flex-md-row explore-row">
                 <div class="col-md-12 text-center">
-                    <h6>
-                        Explore our services <br> <i class="fas fa-chevron-down"></i> </h6>
+                    <h4>
+                        Explore our services <br> <i class="fas fa-chevron-down"></i> </h4>
                     <div class="row services-row">
-                        <div id="expedited-ground" class="col-md-6">
-                            <div class="card float-right">
+                        <div class="col-md-6">
+                            <div id="expedited-ground" class="card float-right">
                                 <div class="card-body text-left">
-                                    <h5 class="card-title">Expedited Ground</h5>
+                                    <h3 class="card-title">Expedited Ground</h3>
                                     <p class="card-text">
                                         Cargo Vans<br>
                                         Sprinter Vans<br>
                                         Straight Trucks<br>
                                         Tractor Trailers
                                     </p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6">
-                            <div class="card float-right">
+                            <div id="trucking" class="card float-right">
                                 <div class="card-body text-left">
-                                    <h5 class="card-title">Card title</h5>
-                                    <p class="card-text">This is a wider card with supporting text below as a natural
-                                        lead-in to additional content. This content is a little bit longer.</p>
-                                    <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                                    <h3 class="card-title">Expedited Ground</h3>
+                                    <p class="card-text">
+                                        Cargo Vans<br>
+                                        Sprinter Vans<br>
+                                        Straight Trucks<br>
+                                        Tractor Trailers
+                                    </p>
                                 </div>
                             </div>
                         </div>
