finished adding services cards

--- a/index.html
+++ b/index.html
@@ -148,12 +148,38 @@
                         <div class="col-md-6">
                             <div id="trucking" class="card float-right">
                                 <div class="card-body text-left">
-                                    <h3 class="card-title">Expedited Ground</h3>
+                                    <h3 class="card-title">Trucking</h3>
                                     <p class="card-text">
-                                        Cargo Vans<br>
-                                        Sprinter Vans<br>
-                                        Straight Trucks<br>
-                                        Tractor Trailers
+                                        Full Truckloads<br>
+                                        Partial Truckloads<br>
+                                        Flatbeds / Drop Decks<br>
+                                        High Security / Special Handling
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div id="domestic-air-freight" class="card float-right">
+                                <div class="card-body text-left">
+                                    <h3 class="card-title">Domestic Air Freight</h3>
+                                    <p class="card-text">
+                                        Same Day<br>
+                                        Next Day<br>
+                                        2nd Day3-5 Day Economy<br>
+                                        A.M. & Specified Time Delivery<br>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div id="customized-services" class="card float-right">
+                                <div class="card-body text-left">
+                                    <h3 class="card-title">Customized Services</h3>
+                                    <p class="card-text">
+                                        Trade Shows / Exhibits<br>
+                                        Crating / Packing<br>
+                                        White Glove<br>
+                                        Reverse Logistics<br>
                                     </p>
                                 </div>
                             </div>
