--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 </div>
             </div>
             <div class="row flex-md-row explore-row">
-                <div class="col-md-12 text-center">
+                <div class="col-md-12 text-center explore-text">
                     <h4>
                         Explore our services <br> <i class="fas fa-chevron-down"></i> </h4>
                     <div class="row services-row">
