added a bunch of stuff, you wouldn't even believe

--- a/index.html
+++ b/index.html
@@ -26,13 +26,19 @@
                     aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
+                <div class="collapse navbar-collapse navbar-toprow" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="active nav-item">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span> </a>
+                            <a class="nav-link" href="index.html">Home<span class="sr-only">(current)</span> </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Services<span class="sr-only">(current)</span> </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Alpha Tracking</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Request a Quote<span class="sr-only">(current)</span> </a>
                         </li>
                         <li class="nav-item nav-item-right">
                             <a class="nav-link-right nav-link" href="#">Contact</a>
@@ -185,6 +191,62 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="row benefits-row">
+                <div class="col-md-12 text-center benefits-header">
+                    <h1>Benefits of using our services</h1>
+                </div>
+                <div class="col-md-5 benefits-map">
+
+                </div>
+                <div class="col-md-7">
+                    <ul>
+                        <li>Our staff has <b>over 40 years of logistics experience</b> ready to work for you!</li>
+
+                        <li>We keep our overhead low, allowing us to maintain <b>competitive pricing</b> in a tough
+                            economy.</li>
+
+                        <li>Our strong buying power assures that we secure the <b>best possible prices and services</b>
+                            for
+                            our
+                            customers.</li>
+
+                        <li>We believe in <b>strong communication!</b> We happily provide you with the real time status
+                            of
+                            your
+                            shipment at the time of you request through our Alpha Tracking Service.</li>
+
+                    </ul>
+                </div>
+            </div>
+            <div class="row staples-row">
+                <div class="col-md-4 text-center">
+                    <img src="images/Staples/undraw_logistics_x4dc.svg">
+                    <h3>Affordable transportation</h3>
+                    <p>
+                        Raging Wolf Solutions is the alpha leader in logistics. Our goal is to ensure quality service
+                        for all of your transportation needs. Reach out and speak to our team about your logistics needs
+                        today!
+                    </p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img src="images/Staples/undraw_map_dros.svg">
+                    <h3>On time and on target</h3>
+                    <p>
+                        Raging Wolf Solutions is the alpha leader in logistics. Our goal is to ensure quality service
+                        for all of your transportation needs. Reach out and speak to our team about your logistics needs
+                        today!
+                    </p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img src="images/Staples/undraw_credit_card_df1m.svg">
+                    <h3>Saving you money</h3>
+                    <p>
+                        Raging Wolf Solutions is the alpha leader in logistics. Our goal is to ensure quality service
+                        for all of your transportation needs. Reach out and speak to our team about your logistics needs
+                        today!
+                    </p>
                 </div>
             </div>
         </div>
