--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body data-title="index">
-    <div class="container">
+    <div class="container body-container">
         <nav class="navbar navbar-expand-lg navbar-light static-top custom-navbar bg-white">
             <div class="container pghelper-bs4-grid-parent-relative">
                 <a class="navbar-brand" href="#"> <img src="images/RW-logo.svg"> </a>
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </nav>
-        <div class="container">
+        <div class="">
             <div class="row flex-column-reverse flex-md-row header-row">
                 <div class="header-section-left col-md-6">
                     <div class="header-content">
