--- a/index.html
+++ b/index.html
@@ -48,24 +48,26 @@
             </div>
         </nav>
         <div class="">
-            <div class="row flex-column-reverse flex-md-row header-row">
+            <div class="row flex-column-reverse flex-lg-row header-row">
 
-                <div class="header-section-left col-md-6">
-                    <div class="header-content">
-                        <h1>Our team is the "alpha" leader in logistics.</h1>
-                        <h5 class="header-section-subtext">Ensuring quality service for all of your transportation
-                            needs. Reach out and speak to our team
-                            about your logistics needs today!</h5>
-                        <div>
-                            <button type="button" class="btn contact-btn">
-                                <h5>Contact Us</h5>
-                            </button>
-                            <button type="button" class="btn track-btn">
-                                <h5>Track a shipment</h5>
-                            </button>
+                <div class="header-section-left col-lg-6">
+                    <div class="header-card">
+                        <div class="header-content">
+                            <h1>Our team is the "alpha" leader in logistics.</h1>
+                            <h5 class="header-section-subtext">Ensuring quality service for all of your transportation
+                                needs. Reach out and speak to our team
+                                about your logistics needs today!</h5>
+                            <div>
+                                <button type="button" class="btn contact-btn">
+                                    <h5>Contact Us</h5>
+                                </button>
+                                <button type="button" class="btn track-btn">
+                                    <h5>Track a shipment</h5>
+                                </button>
+                            </div>
                         </div>
                     </div>
-                    <div class="header-tile">
+                    <!-- <div class="header-tile">
                         <svg width="589" height="431" viewbox="0 0 589 431" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <g filter="url(#filter0_d)">
@@ -115,7 +117,7 @@
                                 </filter>
                             </defs>
                         </svg>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="header-section-right col-m-6">
                     <!-- <img class="slideshow" src="images/RagingWolfSunset.png"> -->
@@ -135,12 +137,12 @@
                 </div>
 
             </div>
-            <div class="row flex-md-row explore-row">
-                <div class="col-md-12 text-center explore-text">
+            <div class="row flex-lg-row explore-row">
+                <div class="col-lg-12 text-center explore-text">
                     <h4>
                         Explore our services <br> <i class="fas fa-chevron-down"></i> </h4>
                     <div class="row services-row">
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div id="expedited-ground" class="card float-right">
                                 <div class="card-body text-left">
                                     <h3 class="card-title">Expedited Ground</h3>
@@ -153,7 +155,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div id="trucking" class="card float-right">
                                 <div class="card-body text-left">
                                     <h3 class="card-title">Trucking</h3>
@@ -166,7 +168,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div id="domestic-air-freight" class="card float-right">
                                 <div class="card-body text-left">
                                     <h3 class="card-title">Domestic Air Freight</h3>
@@ -179,7 +181,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-lg-6">
                             <div id="customized-services" class="card float-right">
                                 <div class="card-body text-left">
                                     <h3 class="card-title">Customized Services</h3>
@@ -196,13 +198,13 @@
                 </div>
             </div>
             <div class="row benefits-row">
-                <div class="col-md-12 text-center benefits-header">
+                <div class="col-lg-12 text-center benefits-header">
                     <h1>Benefits of using our services</h1>
                 </div>
-                <div class="col-md-5 benefits-map">
+                <div class="col-lg-5 benefits-map">
 
                 </div>
-                <div class="col-md-7">
+                <div class="col-lg-7">
                     <ul>
                         <li>Our staff has <b>over 40 years of logistics experience</b> ready to work for you!</li>
 
@@ -223,7 +225,7 @@
                 </div>
             </div>
             <div class="row staples-row">
-                <div class="col-md-4 text-center">
+                <div class="col-lg-4 text-center">
                     <img src="images/Staples/undraw_logistics_x4dc.svg">
                     <h3>Affordable transportation</h3>
                     <p>
@@ -232,7 +234,7 @@
                         today!
                     </p>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-lg-4 text-center">
                     <img src="images/Staples/undraw_map_dros.svg">
                     <h3>On time and on target</h3>
                     <p>
@@ -241,7 +243,7 @@
                         today!
                     </p>
                 </div>
-                <div class="col-md-4 text-center">
+                <div class="col-lg-4 text-center">
                     <img src="images/Staples/undraw_credit_card_df1m.svg">
                     <h3>Saving you money</h3>
                     <p>
