--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
                 </div>
             </div>
         </nav>
+        <div class="row call-us-row">
+            <div class="col-lg-12 text-center">
+                <p>855-WOLF-PAK (965-3725) | Call for your free quote today!</p>
+            </div>
+        </div>
         <div class="">
             <div class="row flex-column-reverse flex-lg-row header-row">
 
